--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,12 @@ SqueakDebug.log
 # Metacello-github cache
 /github-cache
 github-*.zip
+
+# OS stuff
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
