add placeholder Help Panels to Organisation Admin.

--- a/nginx/sites/5smiths.networks.tai.earth.conf
+++ b/nginx/sites/5smiths.networks.tai.earth.conf
@@ -1,7 +1,7 @@
 # NetWorks Organisation
 server {
 	listen 80;
-	server_name };
+	server_name 5smiths.networks.tai.earth;
 	root /opt/git/JupiterJones/NetWorks/www_root;
 	client_max_body_size 10M;
 	
@@ -16,7 +16,7 @@ server {
 		proxy_set_header	X-Forwarded-For 	$proxy_add_x_forwarded_for;
 	}
 	
-	location ~ /} {
+	location ~ /5Smiths {
 		# WebDAV
 		root /opt/git/JupiterJones/NetWorks/privateCloud;
 		client_body_temp_path /opt/git/JupiterJones/NetWorks/privateCloud/tmp;
