--- a/www_root/app/manifest.plist
+++ b/www_root/app/manifest.plist
@@ -17,7 +17,7 @@
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://admin.5smiths.com.au/app/5SmithsSmall58.png</string>
+					<string>https://admin.5smiths.com.au/app/5SmithsSmall58.pn</string>
 				</dict>
 				<dict>
 					<key>kind</key>
