incremental save for production update

--- a/app/NetWorks/NetWorks/Info.plist
+++ b/app/NetWorks/NetWorks/Info.plist
@@ -50,6 +50,8 @@
 	<string>$(PRODUCT_NAME) Image Locations</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>$(PRODUCT_NAME) Completion Documents Library</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>$(PRODUCT_NAME) will add photos to your Library</string>
 	<key>UIFileSharingEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
